added my homework

--- a/Homework 1 - Github and Pandas.ipynb
+++ b/Homework 1 - Github and Pandas.ipynb
@@ -713,7 +713,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which of the variables seem correlated with one another? Which don't? Explain your answer"
+    "Which of the variables seem correlated with one another? Which don't? Explain your answer\n",
+    "\n",
+    "TV appears to be correlated well with Sales. In addition, Radio also appears to be correlated to Sales but not as well as TV is. However, Newspaper does not seem correlated with Sales as seen by the variable spread of the points. "
    ]
   },
   {
