--- a/Homework 4.ipynb
+++ b/Homework 4.ipynb
@@ -34,7 +34,7 @@
     "GROUP BY c.first_name, c.last_name, p.amount\n",
     "ORDER BY p.amount DESC\n",
     "\n",
-    "Output:"
+    "Output: <img src=\"Screen Shot 2017-04-13 at 2.37.23 PM.png\">"
    ]
   },
   {
@@ -57,7 +57,7 @@
     "GROUP BY hour\n",
     "ORDER BY count DESC\n",
     "\n",
-    "Output: \n",
+    "Output: <img src=\"Screen Shot 2017-04-13 at 2.27.15 PM.jpeg\"> \n",
     "\n",
     "Ans: 15:00 (aka 3 pm)"
    ]
@@ -83,6 +83,22 @@
     "    \n",
     "Ans: Store 1 is more profitable than Store 2. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"Screen Shot 2017-04-13 at 5.09.43 PM.jpeg\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
