--- a/Homework 4.ipynb
+++ b/Homework 4.ipynb
@@ -8,21 +8,29 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "1. Give a count of all videos currently out.\n",
     "\n",
-    "SELECT COUNT(inventory_id) FROM rental WHERE return_date IS NULL\n",
+    "SELECT COUNT(inventory_id) \n",
+    "FROM rental \n",
+    "WHERE return_date IS NULL\n",
     "\n",
     "Output: 183"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
     "2. Make a list of all customer names who have videos out and how much they owe.\n",
     "\n",
@@ -62,8 +70,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "3. What hour of the day to people rent the most?\n",
     "\n",
